--- a/src/pages/dados/dados.html
+++ b/src/pages/dados/dados.html
@@ -7,11 +7,15 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+
+    <div style="display: block">
+        <canvas baseChart
+        [data]='doughnutChartData'
+        [labels]='doughnutChartLabels'
+        [chartType]='doughnutChartType'
+        >
+    
+        </canvas>
+      </div>
+
 </ion-content>
