--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -8,4 +8,14 @@
 
 <ion-content padding>
 
+  <div style="display: block">
+    <canvas baseChart
+    [data]='doughnutChartData'
+    [labels]='doughnutChartLabels'
+    [chartType]='doughnutChartType'
+    >
+
+    </canvas>
+  </div>
+
 </ion-content>
