Tela de DashBoard com o gráfico completo

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -10,9 +10,9 @@
 
   <div style="display: block">
     <canvas baseChart
-    [data]='doughnutChartData'
-    [labels]='doughnutChartLabels'
-    [chartType]='doughnutChartType'
+    [datasets]='lineChartData'
+    [labels]='lineChartLabels'
+    [chartType]='lineChartType'
     >
 
     </canvas>
