[WIP] - Os dados estão sendo mostrados dinamicamente, falta consumir o serviço, formatar os campos para money e alterar as cores para mais amigáveis

--- a/src/pages/vendas/vendas.html
+++ b/src/pages/vendas/vendas.html
@@ -10,8 +10,8 @@
     <div class="small-box bg-green">
       <div class="inner">
         <span class="small-box-text">R$ </span>
-        <span class="small-box-text" id="numFirstBox">411.903</span>
-        <p class="small-box-text" id="textFirstBox">Faturamento Mensal</p>
+        <span class="small-box-text" id="numFirstBox">{{dataReceived.VendaPesoCusto[0].SMALL_BOX_1}}</span>
+        <p class="small-box-text" id="textFirstBox">{{dataReceived.VendaPesoCusto[0].SMALL_BOX_1_CAPTION}}</p>
       </div>
       <div class="icon">
         <ion-icon name="cash"></ion-icon>
@@ -24,40 +24,37 @@
     <div class="small-box bg-blue">
       <div class="inner">
         <span class="small-box-text">R$ </span>
-        <span class="small-box-text" id="numSecondBox">2.128.165</span>
-        <p class="small-box-text" id="textSecondBox">Faturamento - Projeção do Mês</p>
+        <span class="small-box-text" id="numSecondBox">{{dataReceived.VendaPesoCusto[0].SMALL_BOX_2}}</span>
+        <p class="small-box-text" id="textSecondBox">{{dataReceived.VendaPesoCusto[0].SMALL_BOX_2_CAPTION}}</p>
       </div>
       <div class="icon">
-          <ion-icon name="ios-podium-outline"></ion-icon>
-          <!--<i class="material-icons md-48">insert_chart</i>-->
+        <ion-icon name="ios-podium-outline"></ion-icon>
       </div>
     </div>
   </div>
 
   <div class="col-lg-3 col-xs-3 col-sm-3">
-      <div class="small-box bg-yellow">
-        <div class="inner">
-          <span class="small-box-text" id="numThirdBox">655</span>
-          <p class="small-box-text" id="textThirdBox">Clientes Positivados</p>
-        </div>
-        <div class="icon">
-            <ion-icon name="ios-people-outline"></ion-icon>
-            <!--<i class="material-icons md-48">face</i>-->
-        </div>
+    <div class="small-box bg-yellow">
+      <div class="inner">
+        <span class="small-box-text" id="numThirdBox">{{dataReceived.VendaPesoCusto[0].SMALL_BOX_3}}</span>
+        <p class="small-box-text" id="textThirdBox">{{dataReceived.VendaPesoCusto[0].SMALL_BOX_3_CAPTION}}</p>
+      </div>
+      <div class="icon">
+        <ion-icon name="ios-people-outline"></ion-icon>
       </div>
     </div>
-    
-    <div class="col-lg-3 col-xs-3 col-sm-3">
-        <div class="small-box bg-red">
-          <div class="inner">
-            <span class="small-box-text" id="numFourthBox">1866</span>
-            <p class="small-box-text" id="textFourthBox">Produtos Positivados</p>
-          </div>
-          <div class="icon">
-              <ion-icon name="md-arrow-round-up"></ion-icon>
-              <!--<i class="material-icons md-48">arrow_upward</i>-->
-          </div>
-        </div>
+  </div>
+
+  <div class="col-lg-3 col-xs-3 col-sm-3">
+    <div class="small-box bg-red">
+      <div class="inner">
+        <span class="small-box-text" id="numFourthBox">{{dataReceived.VendaPesoCusto[0].SMALL_BOX_4}}</span>
+        <p class="small-box-text" id="textFourthBox">{{dataReceived.VendaPesoCusto[0].SMALL_BOX_4_CAPTION}}</p>
       </div>
+      <div class="icon">
+        <ion-icon name="md-arrow-round-up"></ion-icon>
+      </div>
+    </div>
+  </div>
 
 </ion-content>
