Criado os modais de Produto, Fabricante e Clientes com dados mockados por enquanto

--- a/src/pages/dados/dados.html
+++ b/src/pages/dados/dados.html
@@ -26,6 +26,9 @@
 </div>
 
 <div class="modais">
+  <button ion-button block outline (click)="presentProfileModal('Produtos')">Produtos</button>
+  <button ion-button block outline (click)="presentProfileModal('Fabricantes')">Fabricantes</button>
+  <button ion-button block outline (click)="presentProfileModal('Clientes')">Clientes</button>
 
 </div>
 
