--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 
 <ion-content padding>
 
-  <div style="display: block">
+  <div style="display: block" *ngIf="lineChartData && lineChartLabels">
     <canvas baseChart
     [datasets]='lineChartData'
     [labels]='lineChartLabels'
