--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs selectedIndex="1">
   <ion-tab [root]="tab1Root" tabTitle="Diário"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="DashBoard"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="+Dados"></ion-tab>
