--- a/src/pages/dados/dados.html
+++ b/src/pages/dados/dados.html
@@ -13,7 +13,7 @@
   <p ion-text color="primary" class="box-title legend-grey" id="captionTitleDonut">Percentual de representatividade por vendedor (%)</p>
   <p class="legend-grey subtitle" id="captionPeriodDonut">(últimos 3 meses)</p>
 
-  <div style="display:block">
+  <div style="display:block" *ngIf="doughnutChartData && doughnutChartLabels && doughnutChartType">
     <canvas baseChart [data]='doughnutChartData' [labels]='doughnutChartLabels' [chartType]='doughnutChartType'></canvas>
   </div>
 
