--- a/src/pages/vendas/vendas.html
+++ b/src/pages/vendas/vendas.html
@@ -4,9 +4,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content *ngIf="dataReceived">
+<ion-content >
 
-  <div class="col-lg-3 col-xs-3 col-sm-3">
+  <div class="main-content" *ngIf="dataReceived">
+
     <div class="small-box bg-green">
       <div class="inner">
         <span class="small-box-text">R$ </span>
@@ -15,12 +16,9 @@
       </div>
       <div class="icon">
         <ion-icon name="cash"></ion-icon>
-        <!--<i class="material-icons md-48">attach_money</i>-->
       </div>
     </div>
-  </div>
 
-  <div class="col-lg-3 col-xs-3 col-sm-3">
     <div class="small-box bg-blue">
       <div class="inner">
         <span class="small-box-text">R$ </span>
@@ -31,9 +29,7 @@
         <ion-icon name="ios-podium-outline"></ion-icon>
       </div>
     </div>
-  </div>
 
-  <div class="col-lg-3 col-xs-3 col-sm-3">
     <div class="small-box bg-yellow">
       <div class="inner">
         <span class="small-box-text" id="numThirdBox">{{dataReceived.SMALL_BOX_3}}</span>
@@ -43,9 +39,7 @@
         <ion-icon name="ios-people-outline"></ion-icon>
       </div>
     </div>
-  </div>
 
-  <div class="col-lg-3 col-xs-3 col-sm-3">
     <div class="small-box bg-red">
       <div class="inner">
         <span class="small-box-text" id="numFourthBox">{{dataReceived.SMALL_BOX_4}}</span>
@@ -55,6 +49,6 @@
         <ion-icon name="md-arrow-round-up"></ion-icon>
       </div>
     </div>
+  
   </div>
-
 </ion-content>
